src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>In Contact</fullName>
        </values>
        <values>
            <fullName>Marketing Nurture</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Referred to Web Sales - Auto</fullName>
        </values>
        <values>
            <fullName>Sales Nurture</fullName>
        </values>
        <values>
            <fullName>Unqualified - Automatic</fullName>
        </values>
        <values>
            <fullName>Unqualified - Reviewed</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accepted_joined_Group__c</fullName>
        <label>Accepted/Joined Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alexa_Rating__c</fullName>
        <formula>cbit__Clearbit__r.cbit__CompanyMetricsAlexaGlobalRank__c</formula>
        <label>Alexa Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Email_Address__c</fullName>
        <description>Email Address from Degree Lead</description>
        <inlineHelpText>Email Address from Degree Lead</inlineHelpText>
        <label>Alternate Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Came_from_Website__c</fullName>
        <description>Checked if came from website; unchecked otherwise</description>
        <formula>if(  ISPICKVAL(LeadSource, &quot;Inbound: Website&quot;),TRUE,FALSE)</formula>
        <inlineHelpText>Checked if came from website; unchecked otherwise</inlineHelpText>
        <label>Came from Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Country__c</fullName>
        <description>Country of the company</description>
        <inlineHelpText>Country of the company: Auto populated from clearbit</inlineHelpText>
        <label>Company: Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_State__c</fullName>
        <inlineHelpText>State of the company: Auto populated from clearbit</inlineHelpText>
        <label>Company: State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_in_uppercase__c</fullName>
        <description>To use in the Geo Territory formula for case insensitive comparison</description>
        <formula>UPPER( Country )</formula>
        <label>Country in uppercase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_for_Reporting__c</fullName>
        <description>Used to report on created date pre and post migration using single field</description>
        <label>Created Date for Reporting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department within company of lead</description>
        <inlineHelpText>Department within company of lead</inlineHelpText>
        <label>Department</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Range__c</fullName>
        <description>Choose or type:
1-10
11-50
51-150
151-500
501-1000
1001-5000
&gt;5000</description>
        <inlineHelpText>Choose or type:
1-10
11-50
51-150
151-500
501-1000
1001-5000
&gt;5000</inlineHelpText>
        <label>Employee Range</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exec_Intro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exec Intro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Lead_Response_Date__c</fullName>
        <label>First Lead Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name from Degree Lead</description>
        <inlineHelpText>First Name from Degree Lead</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Response_Hours__c</fullName>
        <formula>First_Lead_Response_Date__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated overall hours and not business hours</inlineHelpText>
        <label>First Response Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Segment__c</fullName>
        <label>Functional Segment</label>
        <picklist>
            <picklistValues>
                <fullName>L&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering &amp; IT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Goals__c</fullName>
        <description>Goals stated in degree lead</description>
        <label>Goals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the lead is government-based</description>
        <inlineHelpText>Checked if the lead is government-based</inlineHelpText>
        <label>Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imported_to_Group__c</fullName>
        <label>Imported to Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <globalPicklist>Industry_Category</globalPicklist>
        <inlineHelpText>Industry Category from the Clearbit Industry Field</inlineHelpText>
        <label>Industry Category</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Group_Clearbit__c</fullName>
        <label>Industry Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Group__c</fullName>
        <label>Industry Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invited_Via_Email__c</fullName>
        <label>Invited Via Email</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Industry__c</fullName>
        <description>job industry stated in degree lead</description>
        <label>Job Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>job title stated in degree lead</description>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name from Degree Lead</description>
        <inlineHelpText>Last Name from Degree Lead</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Contact_Hidden__c</fullName>
        <label>Lead Record Type Contact (Hidden)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Hidden__c</fullName>
        <label>Lead Record Type (Hidden)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Oppty_Hidden__c</fullName>
        <defaultValue>&quot;B2B&quot;</defaultValue>
        <label>Lead Record Type Oppty (Hidden)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status_Detail__c</fullName>
        <label>Lead Status Detail</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Follow-up 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested in B2C Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to Web Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Timeline</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Vertical__c</fullName>
        <formula>IF( OR(Government__c=true, contains(Email,&quot;.gov&quot;)),&quot;Government&quot;,
if( Nonprofit__c =true,&quot;Nonprofit&quot;,
&quot;Corporate&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically checked if the lead is a non-profit or govt entity, linked to email (if containing .gov) or if manually checked as a non-profit or govt entity</inlineHelpText>
        <label>Lead Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Lead_SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Lead SF ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Leads_Source__c</fullName>
        <label>Most Recent Leads Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Region__c</fullName>
        <description>For the United States, categorize leads as West or East depending on their state.</description>
        <formula>IF( !CONTAINS( &quot; United States &quot;, Country ), &quot;N/A&quot;,
IF( LEN( State_Province__c ) = 0, &quot;None&quot;,
IF(CONTAINS(&quot; MI : IN : OH : PA : NY : VT : NH : MA : ME : RI : CT : NJ : DE : MD : WV : KY : VA : TN : NC : MS : AL : GA : SC : FL : LA : TX &quot;, State_Province__c ), &quot;East&quot;,
IF(CONTAINS(&quot; WA : OR : ID : MT : WY : ND : SD : NE : MN : IA : WI : IL : MO : AR : KS : OK : NM : CO : UT : AZ : NV : CA : AK : HI &quot;, State_Province__c ), &quot;West&quot;,
IF(CONTAINS(&quot; Michigan : Indiana : Ohio : Pennsylvania : New York : Vermont : New Hampshire : Massachusetts : Maine : Rhode Island : Connecticut : New Jersey : Delaware : Maryland : West Virginia : Kentucky : Virginia : Tennessee : North Carolina : Mississippi : Alabama : Georgia : South Carolina : Florida : Louisiana : Texas &quot;, State_Province__c ), &quot;East&quot;,
IF(CONTAINS(&quot; Washington : Oregon : Idaho : Montana : Wyoming : North Dakota : South Dakota : Minnesota : Iowa : Wisconsin : Illinois : Missouri : Arkansas : Kansas : Oklahoma : New Mexico : Colorado : Utah : Arizona : Nevada : California : Alaska : Hawaii &quot;, State_Province__c ), &quot;West&quot;, &quot;Unknown&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NA_Regions_for_assignment__c</fullName>
        <formula>IF(!CONTAINS(&quot;UNITED STATES : USA : US&quot;,UPPER (Country)), &quot;N/A&quot;, 
IF(LEN(State_in_uppercase__c) = 0, &quot;None&quot;, 
IF(CONTAINS(&quot;CA : AK : HI: ID : MT : ND : OR : PR : SD : WA : WY&quot;, State_in_uppercase__c), &quot;NA1&quot;, 
IF(CONTAINS(&quot;AZ : CO : IA : KS : MN : MO : NE : NV : NM : UT&quot;, State_in_uppercase__c), &quot;NA2&quot;, 
IF(CONTAINS(&quot;AL : AR : IN : MS : OK : TX&quot;, UPPER(State_in_uppercase__c)), &quot;NA3&quot;, 
IF(CONTAINS(&quot;KY : LA : OH : TN&quot;, State_in_uppercase__c), &quot;NA3_Distribution&quot;, 
IF(CONTAINS(&quot;IL : ME : MA : MI : NH : VT : VA : WI&quot;, State_in_uppercase__c), &quot;NA4&quot;, 
IF(CONTAINS(&quot;DC : FL : GA : MD : NC : PA : SC&quot;, State_in_uppercase__c), &quot;NA5&quot;, 
IF(CONTAINS(&quot;CT : DE : NJ : NY : RI : WV&quot;, State_in_uppercase__c), &quot;NA6&quot;, 
IF(CONTAINS(&quot;CALIFORNIA :ALASKA : HAWAII : IDAHO: MONTANA : NORTH DAKOTA : OREGON : PUERTO RICO : SOUTH DAKOTA : WASHINGTON : WYOMING&quot;, State_in_uppercase__c), &quot;NA1&quot;, 
IF(CONTAINS(&quot;ARIZONA : COLORADO : IOWA : KANSAS : MINNESOTA : MISSOURI : NEBRASKA : NEVADA : NEW MEXICO : UTAH&quot;, State_in_uppercase__c), &quot;NA2&quot;, 
IF(CONTAINS(&quot;ALABAMA : ARKANSAS : INDIANA : MISSISSIPPI : OKLAHOMA : TEXAS&quot;, State_in_uppercase__c), &quot;NA3&quot;, 
IF(CONTAINS(&quot;KENTUCKY : LOUISIANA : OHIO : TENNESSEE&quot;, State_in_uppercase__c), &quot;NA3_Distribution&quot;, 
IF(CONTAINS(&quot;ILLINOIS : MAINE : MASSACHUSETTS : MICHIGAN : NEW HAMPSHIRE : VERMONT : VIRGINIA : WISCONSIN&quot;, State_in_uppercase__c), &quot;NA4&quot;, 
IF(CONTAINS(&quot;DC : FLORIDA : GEORGIA : MARYLAND : NORTH CAROLINA : PENNSYLVANIA : SOUTH CAROLINA&quot;, State_in_uppercase__c), &quot;NA5&quot;, 
IF(CONTAINS(&quot;CONNECTICUT : DELAWARE : NEW JERSEY : NEW YORK : RHODE ISLAND : WEST VIRGINIA&quot;, State_in_uppercase__c), &quot;NA6&quot;, &quot;Unknown&quot;))))))))))))))))</formula>
        <label>NA Regions for assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nonprofit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the lead is nonprofit (should verify through Guidestar)</description>
        <inlineHelpText>Checked if the lead is nonprofit (should verify through Guidestar)</inlineHelpText>
        <label>Nonprofit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes and/or next steps</description>
        <inlineHelpText>Notes and/or next steps</inlineHelpText>
        <label>(Hidden) Nonprofit Notes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_Geo_Territory__c</fullName>
        <formula>IF(LEN( Country ) = 0, &quot;None&quot;, 
IF(CONTAINS( &quot; Canada : United States &quot;, Country ), &quot;North America&quot;, 
IF(CONTAINS( &quot; India &quot;, Country ), &quot;India&quot;, 
IF(CONTAINS( &quot; Anguilla : Mexico: México: Antigua and Barbuda : Argentina : Aruba : Bahamas : Barbados : Belize : Bermuda : Bolivia, Plurinational State of : Bonaire, Sint Eustatius and Saba : Brazil : Cayman Islands : Chile : Colombia : Costa Rica : Cuba : Curaçao : Dominica : Dominican Republic : Ecuador : El Salvador : French Guiana : Falkland Islands (Malvinas) : Grenada : Guadeloupe : Guatemala : Guyana : Haiti : Honduras : Jamaica : Martinique (French Ant.) : Montserrat : New Caledonia : Nicaragua : Panama : Paraguay : Peru : Saint Helena, Ascension and Tristan da Cunha : Saint Kitts and Nevis : Saint Lucia : Saint Martin : Saint Pierre and Miquelon : Saint Vincent and the Grenadines : Sint Maarten : South Georgia and the South Sandwich Islands : Suriname : Trinidad and Tobago : Turks and Caicos Islands : Uruguay : Venezuela : Virgin Islands, British&quot;, Country ), &quot;LATAM&quot;, 

IF(CONTAINS (&quot;Albania : Andorra : Austria : Belarus : Belgium : Bosnia and Herzegovina : Bulgaria : Croatia : Cyprus : Czech Republic : Denmark : Estonia : Faroe Islands : Finland : France : Georgia : Germany : Gibraltar : Greece : Guernsey : Hungary : Iceland : Isle of Man : Italy : Jersey : Kosovo : Latvia : Liechtenstein : Lithuania : Luxembourg : Macedonia : Malta : Moldova : Monaco : Montenegro : Netherlands : Norway : Poland : Portugal : Romania : Russia : San Marino : Serbia : Slovakia : Slovenia : Spain : Svalbard and Jan Mayen Island : Sweden : Switzerland : Turkey : Ukraine : Vatican City : Armenia : Afghanistan : Azerbaijan : Bahrain : Egypt : Iran : Iraq : Israel : Jordan : Kuwait : Lebanon : Oman : Pakistan : Palestine : Qatar : Saudi Arabia : Syria : United Arab Emirates : Angola : Benin : Botswana : Burkina Faso : Burundi : Cameroon : Cape Verde : Central African Republic : Chad : Comoros : Congo, the Democratic Republic of the : Cote d’Ivoire : Djibouti : Equatorial Guinea : Eritrea : Ethiopia : French Southern Territories : Gabon : Gambia : Ghana : Guinea : Guinea-Bissau : Heard Island and McDonald Islands : Kenya : Lesotho : Liberia : Libya : Madagascar : Malawi : Mali : Mauritania : Mauritius : Mayotte : Morocco : Mozambique : Namibia : Niger : Nigeria : Reunion Island : Rwanda : Saint Barthélemy : Sao Tome and Principe : Senegal : Seychelles : Sierra Leone : Somalia : South Africa : South Georgia and the South Sandwich Islands : South Sudan : Sudan : Swaziland : Tanzania : Togo : Tunisia : Uganda : Western Sahara : Zambia : Zimbabwe : Ireland : United Kingdom : Yemen: Algeria&quot;, Country ), &quot;EMEA&quot;, 
IF(CONTAINS ( &quot; Bangladesh : Bhutan : Brunei : Cambodia : China : Indonesia : Japan : Kazakhstan : North Korea : South Korea : Kyrgyzstan : Laos : Macao : Malaysia : Mongolia : Myanmar : Nepal : Singapore : Sri Lanka : Taiwan : Turkmenistan : Uzbekistan : Vietnam : Australia : British Indian Ocean Territory : Christmas Island : Cocos (Keeling) Islands : Cook Islands : Federated States of Micronesia : Fiji : French Polynesia : Kiribati : Maldives : Marshall Islands : Mongolia : Myanmar : Nauru : Nepal : New Zealand : Niue Island : Norfolk Island : Palau : Papua New Guinea : Philippines : Pitcairn Island : Samoa : Solomon Islands : Timor-Leste : Tokelau Island : Tonga Island : Tuvalu : Burma: Vanuatu : Virgin Islands, US : Wallis and Futuna&quot;, Country ), &quot;Non-India APAC&quot;, &quot;Unknown&quot;))))))</formula>
        <label>OLD Geo Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Lead_Source__c</fullName>
        <description>Original lead source that can not be updated.</description>
        <label>Original Lead Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_MQL_Date__c</fullName>
        <inlineHelpText>Original MQL Date</inlineHelpText>
        <label>Original MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outreach__c</fullName>
        <description>Outreach channel via which the lead is identified</description>
        <inlineHelpText>Outreach event</inlineHelpText>
        <label>Outreach</label>
        <picklist>
            <picklistValues>
                <fullName>SDR Outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE Outbound</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Shortname__c</fullName>
        <label>Partner Shortname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Call_One_Date__c</fullName>
        <label>Phone Call One Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Call_Three_Date__c</fullName>
        <label>Phone Call Three Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Call_Two_Date__c</fullName>
        <label>Phone Call Two Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Phone number from Degree Lead</description>
        <inlineHelpText>Phone number from Degree Lead</inlineHelpText>
        <label>Phone Number</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted_in_Forums__c</fullName>
        <label>Posted in Forums</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_Call__c</fullName>
        <label>Proactive Call</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_Email__c</fullName>
        <description>Date for Proactive Email</description>
        <label>Proactive Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <label>Program ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_18_Digit_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Salesforce 18 Digit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_reported_employees_to_buy_for__c</fullName>
        <description>Choose or type:
1-10
11-50
51-150
151-500
501-1000
1001-5000
&gt;5000</description>
        <inlineHelpText>Choose or type:
1-10
11-50
51-150
151-500
501-1000
1001-5000
&gt;5000</inlineHelpText>
        <label>Self-reported # employees to buy for</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <label>Source ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_in_uppercase__c</fullName>
        <description>Created to use in NA Regions for assignment for case insensitive comparison</description>
        <formula>UPPER(  State  )</formula>
        <label>State in uppercase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Response_ID__c</fullName>
        <description>ID for looking up raw response data</description>
        <label>Survey Response ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminal_Section_ID__c</fullName>
        <description>Section identifier for the end state reached by the submission</description>
        <label>Terminal Section ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Automatic_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unqualified Automatic Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WES_Auto_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WES Auto Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebSales_Transaction_Date__c</fullName>
        <label>WebSales Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Web_Sale_Tx_Type__c</fullName>
        <label>Web Sales Transaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Sales_Amount__c</fullName>
        <label>Web Sales Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Sales_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Web Sales Primary Contact</label>
        <referenceTo>WeS_Tx_Primary_Contact__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Web_Sales_Transaction_ID__c</fullName>
        <label>Web Sales Transaction ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_the_lead_asked_for_on_the_website__c</fullName>
        <description>Initial description that the lead provided through the website (not editable by internal SFDC team)</description>
        <inlineHelpText>Initial description that the lead provided through the website (not editable by internal SFDC team)</inlineHelpText>
        <label>Self-reported needs from lead:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X2016_Geo_Territory__c</fullName>
        <description>Based on lookup against &apos;Country&apos;, looks up the primary Coursera territory for routing and prioritization purposes</description>
        <formula>IF(LEN(Country_in_uppercase__c) = 0, &quot;None&quot;, 
IF(CONTAINS( &quot; CANADA : UNITED STATES : USA : US &quot;, Country_in_uppercase__c), &quot;North America&quot;, 
IF(CONTAINS( &quot; INDIA &quot;, Country_in_uppercase__c), &quot;India&quot;, 
IF(CONTAINS( &quot; ANGUILLA : MEXICO: MÉXICO: ANTIGUA AND BARBUDA : ARGENTINA : ARUBA : BAHAMAS : BARBADOS : BELIZE : BERMUDA : BOLIVIA, PLURINATIONAL STATE OF : BONAIRE, SINT EUSTATIUS AND SABA : BRAZIL : CAYMAN ISLANDS : CHILE : COLOMBIA : COSTA RICA : CUBA : CURAÇAO : DOMINICA : DOMINICAN REPUBLIC : ECUADOR : EL SALVADOR : FRENCH GUIANA : FALKLAND ISLANDS (MALVINAS) : GRENADA : GUADELOUPE : GUATEMALA : GUYANA : HAITI : HONDURAS : JAMAICA : MARTINIQUE (FRENCH ANT.) : MONTSERRAT : NEW CALEDONIA : NICARAGUA : PANAMA : PARAGUAY : PERU : PUERTO RICO : SAINT HELENA, ASCENSION AND TRISTAN DA CUNHA : SAINT KITTS AND NEVIS : SAINT LUCIA : SAINT MARTIN : SAINT PIERRE AND MIQUELON : SAINT VINCENT AND THE GRENADINES : SINT MAARTEN : SOUTH GEORGIA AND THE SOUTH SANDWICH ISLANDS : SURINAME : TRINIDAD AND TOBAGO : TURKS AND CAICOS ISLANDS : URUGUAY : VENEZUELA : VIRGIN ISLANDS, BRITISH&quot;, Country_in_uppercase__c), &quot;LATAM&quot;, 

IF(CONTAINS (&quot;ALBANIA : ANDORRA : AUSTRIA : BELARUS : BOSNIA AND HERZEGOVINA : BULGARIA : CROATIA : CYPRUS : CZECH REPUBLIC : DENMARK : ESTONIA : FAROE ISLANDS : FINLAND : GEORGIA : GERMANY : GIBRALTAR : GREECE : GUERNSEY : HUNGARY : ICELAND : ISLE OF MAN : ITALY : JERSEY : KOSOVO : LATVIA : LIECHTENSTEIN : LITHUANIA : MACEDONIA : MALTA : MOLDOVA : MONACO : MONTENEGRO : NORWAY : POLAND : PORTUGAL : ROMANIA : RUSSIA : SAN MARINO : SERBIA : SLOVAKIA : SLOVENIA : SPAIN : ESPAÑA : SVALBARD AND JAN MAYEN ISLAND : SWEDEN : SWITZERLAND : TURKEY : UKRAINE : VATICAN CITY : ARMENIA : AFGHANISTAN : AZERBAIJAN : BAHRAIN : EGYPT : IRAN : IRAQ : ISRAEL : JORDAN : KUWAIT : LEBANON : OMAN : PAKISTAN : PALESTINE : QATAR : SAUDI ARABIA : SYRIA : UNITED ARAB EMIRATES : ANGOLA : BENIN : BOTSWANA : BURKINA FASO : BURUNDI : CAMEROON : CAPE VERDE : CENTRAL AFRICAN REPUBLIC : CHAD : COMOROS : CONGO, THE DEMOCRATIC REPUBLIC OF THE : COTE D’IVOIRE : DJIBOUTI : EQUATORIAL GUINEA : ERITREA : ETHIOPIA : FRENCH SOUTHERN TERRITORIES : GABON : GAMBIA : GHANA : GUINEA : GUINEA-BISSAU : HEARD ISLAND AND MCDONALD ISLANDS : KENYA : LESOTHO : LIBERIA : LIBYA : MADAGASCAR : MALAWI : MALI : MAURITANIA : MAURITIUS : MAYOTTE : MOROCCO : MOZAMBIQUE : NAMIBIA : NIGER : NIGERIA : REUNION ISLAND : RWANDA : SAINT BARTHÉLEMY : SAO TOME AND PRINCIPE : SENEGAL : SEYCHELLES : SIERRA LEONE : SOMALIA : SOUTH AFRICA : SOUTH GEORGIA AND THE SOUTH SANDWICH ISLANDS : SOUTH SUDAN : SUDAN : SWAZILAND : TANZANIA : TOGO : TUNISIA : UGANDA : WESTERN SAHARA : ZAMBIA : ZIMBABWE : IRELAND : UNITED KINGDOM : YEMEN: ALGERIA&quot;, Country_in_uppercase__c), &quot;EMEA&quot;,

IF(CONTAINS ( &quot;LUXEMBOURG : FRANCE : BELGIUM : NETHERLANDS&quot;, Country_in_uppercase__c), &quot;EMEA_2&quot;,
 
IF(CONTAINS ( &quot; BANGLADESH : BHUTAN : BRUNEI : CAMBODIA : CHINA : HONG KONG: INDONESIA : JAPAN : KAZAKHSTAN : NORTH KOREA : SOUTH KOREA : KYRGYZSTAN : LAOS : MACAO : MALAYSIA : MONGOLIA : MYANMAR : NEPAL : SINGAPORE : SRI LANKA : TAIWAN : TURKMENISTAN : UZBEKISTAN : VIETNAM : AUSTRALIA : BRITISH INDIAN OCEAN TERRITORY : CHRISTMAS ISLAND : COCOS (KEELING) ISLANDS : COOK ISLANDS : FEDERATED STATES OF MICRONESIA : FIJI : FRENCH POLYNESIA : KIRIBATI : MALDIVES : MARSHALL ISLANDS : MONGOLIA : MYANMAR : NAURU : NEPAL : NEW ZEALAND : NIUE ISLAND : NORFOLK ISLAND : PALAU : PAPUA NEW GUINEA : PHILIPPINES : PITCAIRN ISLAND : SAMOA : SOLOMON ISLANDS : THAILAND : TIMOR-LESTE : TOKELAU ISLAND : TONGA ISLAND : TUVALU : BURMA: VANUATU : VIRGIN ISLANDS, US : WALLIS AND FUTUNA&quot;, Country_in_uppercase__c), &quot;Non-India APAC&quot;, &quot;Unknown&quot;)))))))</formula>
        <inlineHelpText>Based on lookup against &apos;Country&apos;, looks up the primary Coursera territory for routing and prioritization purposes</inlineHelpText>
        <label>Geo Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cbit__ClearbitReady__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clearbit Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cbit__Clearbit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clearbit</label>
        <referenceTo>cbit__Clearbit__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cbit__Facebook__c</fullName>
        <formula>IF(  LEN(cbit__Clearbit__r.cbit__FacebookHandle__c ) ==0,&apos;&apos;, HYPERLINK(&quot;http://facebook.com/&quot; &amp; cbit__Clearbit__r.cbit__FacebookHandle__c, &quot;facebook.com/&quot; &amp; cbit__Clearbit__r.cbit__FacebookHandle__c )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facebook</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cbit__LinkedIn__c</fullName>
        <formula>IF(  LEN(cbit__Clearbit__r.cbit__LinkedinHandle__c ) ==0,&apos;&apos;, HYPERLINK(&quot;http://linkedin.com/&quot; &amp; cbit__Clearbit__r.cbit__LinkedinHandle__c, &quot;linkedin.com/&quot; &amp; cbit__Clearbit__r.cbit__LinkedinHandle__c )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cbit__Twitter__c</fullName>
        <formula>IF( LEN(cbit__Clearbit__r.cbit__TwitterHandle__c ) ==0,&apos;&apos;, HYPERLINK(&quot;http://twitter.com/&quot; &amp; cbit__Clearbit__r.cbit__TwitterHandle__c, &quot;twitter.com/&quot; &amp; cbit__Clearbit__r.cbit__TwitterHandle__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Twitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <description>Captures acquisition date from Marketo</description>
        <inlineHelpText>Marketo: Acquisition Date</inlineHelpText>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program_Id__c</fullName>
        <description>Marketo: Acquisition Program Id</description>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <description>Captures Name of the Acquisition Program from Marketo</description>
        <inlineHelpText>Marketo Acquisition Program</inlineHelpText>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_City__c</fullName>
        <description>Marketo : Inferred City</description>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Company__c</fullName>
        <description>Marketo: Inferred Company</description>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <description>Marketo: Inferred Country</description>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Metropolitan_Area__c</fullName>
        <description>Marketo: Inferred Metropolitan Area</description>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>